--- a/terraform/dns/.envrc.template
+++ b/terraform/dns/.envrc.template
@@ -1,4 +1,3 @@
-export AWS_ACCESS_KEY_ID='' \
-    AWS_SECRET_ACCESS_KEY='' \
-    CLOUDFLARE_EMAIL='' \
+source ../.envrc 
+export CLOUDFLARE_EMAIL='' \
     CLOUDFLARE_API_KEY=''
