--- a/terraform/dns/.envrc.template
+++ b/terraform/dns/.envrc.template
@@ -1,3 +1,2 @@
 source ../.envrc 
-export CLOUDFLARE_EMAIL='' \
-    CLOUDFLARE_API_KEY=''
+export CLOUDFLARE_API_TOKEN='<global_api_key_or_api_token>'
