setting default directory for now

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -3,6 +3,10 @@ on:
   push:
   pull_request:
 
+
+defaults:
+  run:
+    working-directory: terraform/dns/
 jobs:
   terraform_lint:
     runs-on: ubuntu-latest
