trying out different env setup

--- a/.github/workflows/auto-plan.yml
+++ b/.github/workflows/auto-plan.yml
@@ -19,9 +19,10 @@ defaults:
 env:
   AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
   AWS_SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_ACCESS_KEY }}" 
+  CLOUDFLARE_API_TOKEN: "${{ secrets.CLOUDFLARE_API_TOKEN }}" 
 
 jobs:
-  terraform_plan:
+  terraform_lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -31,6 +32,13 @@ jobs:
         id: fmt
         run: terraform fmt -check
         continue-on-error: true
+
+  terraform_plan:
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Init
         id: init
@@ -42,6 +50,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
+        if: github.event_name == 'pull_request'
         run: terraform plan -no-color
         continue-on-error: true
 
