--- a/.github/workflows/auto-plan.yml
+++ b/.github/workflows/auto-plan.yml
@@ -34,6 +34,7 @@ jobs:
         continue-on-error: true
 
   terraform_plan:
+    needs: terraform_lint
     runs-on: ubuntu-latest
     environment: production
     steps:
