--- a/.github/workflows/auto-plan.yml
+++ b/.github/workflows/auto-plan.yml
@@ -5,15 +5,14 @@ name: Terraform Plan
 # - https://github.com/marketplace/actions/hashicorp-setup-terraform#usage
 
 on:
-
   pull_request:
-  workflow_run:
-    workflows: ["Linting"]
-    types:
-      - completed
+  workflow_dispatch:
+
 
 defaults:
   run:
+    # temporary till I write a script to find all terraform files and apply/plan them all
+    #   based off of this: git diff <branch_name> --name-only | grep '.tf$' | xargs -I {} dirname '{}' | sort -u
     working-directory: terraform/dns/
 env:
   AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
@@ -30,6 +29,7 @@ jobs:
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
+        # TODO: should be removed after files are formatted
         continue-on-error: true
 
   terraform_plan:
@@ -50,7 +50,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color
+        run: terraform plan -no-color -out=terraform.plan
         continue-on-error: true
 
       - uses: actions/github-script@v6
@@ -110,3 +110,34 @@ jobs:
                 body: output
               })
             }
+
+      - name: Terraform Plan Status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
+
+      - name: uploading terraform plan
+        uses: actions/upload-artifact@v3
+        with:
+          name: terraform-plan
+          path: terraform.plan
+
+  terraform_apply:
+    needs: terraform_plan
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v2
+
+      - name: downloading algolia data
+        uses: actions/download-artifact@v3
+        with:
+          name: terraform-plan
+
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false terraform.plan
