--- a/.github/workflows/auto-plan.yml
+++ b/.github/workflows/auto-plan.yml
@@ -5,6 +5,8 @@ name: Terraform Plan
 # - https://github.com/marketplace/actions/hashicorp-setup-terraform#usage
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
   workflow_dispatch:
 
@@ -124,6 +126,7 @@ jobs:
   terraform_apply:
     needs: terraform_plan
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment: production
     steps:
       - uses: actions/checkout@v2
@@ -139,5 +142,4 @@ jobs:
         run: terraform init
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false terraform.plan
